Update dependencies and switch to Java 17